# ROS-Coding

./: README.md  Requirement.md  reconstructed_mesh.ply
project/catkin_ws/: userinformation.txt
project/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
project/catkin_ws/devel/lib/colourcamera/: colourcamera
project/catkin_ws/devel/lib/depthcamera/: depthcamera
project/catkin_ws/devel/lib/final_system/: final_system
project/catkin_ws/devel/lib/gmapping/: gmapping
project/catkin_ws/devel/lib/imu/: imu
project/catkin_ws/devel/lib/odometry/: odometry
project/catkin_ws/devel/lib/pclpoints/: pclpoints
project/catkin_ws/devel/lib/pkgconfig/: colourcamera.pc  depthcamera.pc  final_system.pc  gmapping.pc  imu.pc  odometry.pc  pclpoints.pc  pointcloud_reconstruction.pc  slam-gmapping.pc
project/catkin_ws/devel/lib/pointcloud_reconstruction/: reconstruction_node
project/catkin_ws/devel/lib/slam-gmapping/: slam-gmapping
project/catkin_ws/devel/share/colourcamera/cmake/: colourcamera-msg-extras.cmake  colourcamera-msg-paths.cmake  colourcameraConfig.cmake
project/catkin_ws/devel/share/depthcamera/cmake/: depthcamera-msg-extras.cmake  depthcamera-msg-paths.cmake  depthcameraConfig.cmake
project/catkin_ws/devel/share/final_system/cmake/: final_system-msg-paths.cmake  final_systemConfig.cmake
project/catkin_ws/devel/share/gmapping/cmake/: gmapping-msg-extras.cmake  gmapping-msg-paths.cmake  gmappingConfig.cmake
project/catkin_ws/devel/share/imu/cmake/: imuConfig.cmake
project/catkin_ws/devel/share/odometry/cmake/: odometryConfig.cmake
project/catkin_ws/devel/share/pclpoints/cmake/: pclpoints-msg-paths.cmake  pclpointsConfig.cmake
project/catkin_ws/devel/share/pointcloud_reconstruction/cmake/: pointcloud_reconstructionConfig.cmake
project/catkin_ws/devel/share/roseus/ros/final_system/: manifest.l
project/catkin_ws/devel/share/roseus/ros/gmapping/: manifest.l
project/catkin_ws/devel/share/roseus/ros/imu/: manifest.l
project/catkin_ws/devel/share/roseus/ros/odometry/: manifest.l
project/catkin_ws/devel/share/roseus/ros/slam-gmapping/: manifest.l
project/catkin_ws/devel/share/slam-gmapping/cmake/: slam-gmapping-msg-extras.cmake  slam-gmapping-msg-paths.cmake  slam-gmappingConfig.cmake
project/catkin_ws/src/colourcamera/: CMakeLists.txt
project/catkin_ws/src/colourcamera/src/: main.cpp
project/catkin_ws/src/depthcamera/: CMakeLists.txt
project/catkin_ws/src/depthcamera/src/: main.cpp
project/catkin_ws/src/final_system/: CMakeLists.txt
project/catkin_ws/src/final_system/src/: main.cpp
project/catkin_ws/src/imu/: CMakeLists.txt
project/catkin_ws/src/imu/src/: main.cpp
project/catkin_ws/src/odometry/: CMakeLists.txt
project/catkin_ws/src/odometry/src/: main.cpp
project/catkin_ws/src/pclpoints/: CMakeLists.txt
project/catkin_ws/src/pclpoints/src/: main.cpp
project/catkin_ws/src/pointcloud_reconstruction/: CMakeLists.txt
project/catkin_ws/src/pointcloud_reconstruction/src/: reconstruction_node.cpp
project/catkin_ws/src/slam-gmapping/: CMakeLists.txt
project/catkin_ws/src/slam-gmapping/src/: main.cpp
report/: Report.md
